translation_methods/3/gates_of_hell/Src/Parser/CodeParser.cpp

// Generated from Code.g4 by ANTLR 4.9.3


#include "CodeVisitor.h"

#include "CodeParser.h"


using namespace antlrcpp;
using namespace antlr4;

CodeParser::CodeParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CodeParser::~CodeParser() {
  delete _interpreter;
}

std::string CodeParser::getGrammarFileName() const {
  return "Code.g4";
}

const std::vector<std::string>& CodeParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CodeParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

CodeParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CodeParser::ExpressionsContext* CodeParser::FileContext::expressions() {
  return getRuleContext<CodeParser::ExpressionsContext>(0);
}

tree::TerminalNode* CodeParser::FileContext::EOF() {
  return getToken(CodeParser::EOF, 0);
}


size_t CodeParser::FileContext::getRuleIndex() const {
  return CodeParser::RuleFile;
}


antlrcpp::Any CodeParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::FileContext* CodeParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, CodeParser::RuleFile);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    expressions();
    setState(55);
    match(CodeParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionsContext ------------------------------------------------------------------

CodeParser::ExpressionsContext::ExpressionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CodeParser::ExpressionContext *> CodeParser::ExpressionsContext::expression() {
  return getRuleContexts<CodeParser::ExpressionContext>();
}

CodeParser::ExpressionContext* CodeParser::ExpressionsContext::expression(size_t i) {
  return getRuleContext<CodeParser::ExpressionContext>(i);
}


size_t CodeParser::ExpressionsContext::getRuleIndex() const {
  return CodeParser::RuleExpressions;
}


antlrcpp::Any CodeParser::ExpressionsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitExpressions(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::ExpressionsContext* CodeParser::expressions() {
  ExpressionsContext *_localctx = _tracker.createInstance<ExpressionsContext>(_ctx, getState());
  enterRule(_localctx, 2, CodeParser::RuleExpressions);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(58); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(57);
              expression();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(60); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

CodeParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CodeParser::Many_one_line_exprsContext* CodeParser::ExpressionContext::many_one_line_exprs() {
  return getRuleContext<CodeParser::Many_one_line_exprsContext>(0);
}

CodeParser::Multi_line_exprContext* CodeParser::ExpressionContext::multi_line_expr() {
  return getRuleContext<CodeParser::Multi_line_exprContext>(0);
}

std::vector<tree::TerminalNode *> CodeParser::ExpressionContext::TAB() {
  return getTokens(CodeParser::TAB);
}

tree::TerminalNode* CodeParser::ExpressionContext::TAB(size_t i) {
  return getToken(CodeParser::TAB, i);
}


size_t CodeParser::ExpressionContext::getRuleIndex() const {
  return CodeParser::RuleExpression;
}


antlrcpp::Any CodeParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::ExpressionContext* CodeParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 4, CodeParser::RuleExpression);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CodeParser::TAB) {
      setState(62);
      match(CodeParser::TAB);
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(70);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CodeParser::BREAK:
      case CodeParser::CONTINUE:
      case CodeParser::FALSE:
      case CodeParser::NOT:
      case CodeParser::PRINT:
      case CodeParser::TRUE:
      case CodeParser::LPAR:
      case CodeParser::IDENTIFICATOR:
      case CodeParser::INT:
      case CodeParser::NUM:
      case CodeParser::ADD_OP:
      case CodeParser::STRING: {
        setState(68);
        many_one_line_exprs();
        break;
      }

      case CodeParser::ELIF:
      case CodeParser::ELSE:
      case CodeParser::FOR:
      case CodeParser::IF:
      case CodeParser::WHILE: {
        setState(69);
        multi_line_expr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Multi_line_exprContext ------------------------------------------------------------------

CodeParser::Multi_line_exprContext::Multi_line_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CodeParser::If_statementContext* CodeParser::Multi_line_exprContext::if_statement() {
  return getRuleContext<CodeParser::If_statementContext>(0);
}

CodeParser::Elif_statementContext* CodeParser::Multi_line_exprContext::elif_statement() {
  return getRuleContext<CodeParser::Elif_statementContext>(0);
}

CodeParser::Else_statementContext* CodeParser::Multi_line_exprContext::else_statement() {
  return getRuleContext<CodeParser::Else_statementContext>(0);
}

CodeParser::While_statementContext* CodeParser::Multi_line_exprContext::while_statement() {
  return getRuleContext<CodeParser::While_statementContext>(0);
}

CodeParser::For_statementContext* CodeParser::Multi_line_exprContext::for_statement() {
  return getRuleContext<CodeParser::For_statementContext>(0);
}


size_t CodeParser::Multi_line_exprContext::getRuleIndex() const {
  return CodeParser::RuleMulti_line_expr;
}


antlrcpp::Any CodeParser::Multi_line_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitMulti_line_expr(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::Multi_line_exprContext* CodeParser::multi_line_expr() {
  Multi_line_exprContext *_localctx = _tracker.createInstance<Multi_line_exprContext>(_ctx, getState());
  enterRule(_localctx, 6, CodeParser::RuleMulti_line_expr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(77);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CodeParser::IF: {
        enterOuterAlt(_localctx, 1);
        setState(72);
        if_statement();
        break;
      }

      case CodeParser::ELIF: {
        enterOuterAlt(_localctx, 2);
        setState(73);
        elif_statement();
        break;
      }

      case CodeParser::ELSE: {
        enterOuterAlt(_localctx, 3);
        setState(74);
        else_statement();
        break;
      }

      case CodeParser::WHILE: {
        enterOuterAlt(_localctx, 4);
        setState(75);
        while_statement();
        break;
      }

      case CodeParser::FOR: {
        enterOuterAlt(_localctx, 5);
        setState(76);
        for_statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Many_one_line_exprsContext ------------------------------------------------------------------

CodeParser::Many_one_line_exprsContext::Many_one_line_exprsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CodeParser::One_line_exprContext *> CodeParser::Many_one_line_exprsContext::one_line_expr() {
  return getRuleContexts<CodeParser::One_line_exprContext>();
}

CodeParser::One_line_exprContext* CodeParser::Many_one_line_exprsContext::one_line_expr(size_t i) {
  return getRuleContext<CodeParser::One_line_exprContext>(i);
}

std::vector<tree::TerminalNode *> CodeParser::Many_one_line_exprsContext::SEMICOL() {
  return getTokens(CodeParser::SEMICOL);
}

tree::TerminalNode* CodeParser::Many_one_line_exprsContext::SEMICOL(size_t i) {
  return getToken(CodeParser::SEMICOL, i);
}

tree::TerminalNode* CodeParser::Many_one_line_exprsContext::NEW_LINE() {
  return getToken(CodeParser::NEW_LINE, 0);
}


size_t CodeParser::Many_one_line_exprsContext::getRuleIndex() const {
  return CodeParser::RuleMany_one_line_exprs;
}


antlrcpp::Any CodeParser::Many_one_line_exprsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitMany_one_line_exprs(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::Many_one_line_exprsContext* CodeParser::many_one_line_exprs() {
  Many_one_line_exprsContext *_localctx = _tracker.createInstance<Many_one_line_exprsContext>(_ctx, getState());
  enterRule(_localctx, 8, CodeParser::RuleMany_one_line_exprs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(79);
    one_line_expr();
    setState(84);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(80);
        match(CodeParser::SEMICOL);
        setState(81);
        one_line_expr(); 
      }
      setState(86);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CodeParser::SEMICOL) {
      setState(87);
      match(CodeParser::SEMICOL);
    }
    setState(91);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CodeParser::NEW_LINE) {
      setState(90);
      match(CodeParser::NEW_LINE);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- One_line_exprContext ------------------------------------------------------------------

CodeParser::One_line_exprContext::One_line_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CodeParser::Var_assContext* CodeParser::One_line_exprContext::var_ass() {
  return getRuleContext<CodeParser::Var_assContext>(0);
}

CodeParser::OperationContext* CodeParser::One_line_exprContext::operation() {
  return getRuleContext<CodeParser::OperationContext>(0);
}

tree::TerminalNode* CodeParser::One_line_exprContext::BREAK() {
  return getToken(CodeParser::BREAK, 0);
}

tree::TerminalNode* CodeParser::One_line_exprContext::CONTINUE() {
  return getToken(CodeParser::CONTINUE, 0);
}

CodeParser::PrintContext* CodeParser::One_line_exprContext::print() {
  return getRuleContext<CodeParser::PrintContext>(0);
}


size_t CodeParser::One_line_exprContext::getRuleIndex() const {
  return CodeParser::RuleOne_line_expr;
}


antlrcpp::Any CodeParser::One_line_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitOne_line_expr(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::One_line_exprContext* CodeParser::one_line_expr() {
  One_line_exprContext *_localctx = _tracker.createInstance<One_line_exprContext>(_ctx, getState());
  enterRule(_localctx, 10, CodeParser::RuleOne_line_expr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      var_ass();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(94);
      operation();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(95);
      match(CodeParser::BREAK);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(96);
      match(CodeParser::CONTINUE);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(97);
      print();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintContext ------------------------------------------------------------------

CodeParser::PrintContext::PrintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CodeParser::PrintContext::PRINT() {
  return getToken(CodeParser::PRINT, 0);
}

tree::TerminalNode* CodeParser::PrintContext::LPAR() {
  return getToken(CodeParser::LPAR, 0);
}

std::vector<CodeParser::OperationContext *> CodeParser::PrintContext::operation() {
  return getRuleContexts<CodeParser::OperationContext>();
}

CodeParser::OperationContext* CodeParser::PrintContext::operation(size_t i) {
  return getRuleContext<CodeParser::OperationContext>(i);
}

tree::TerminalNode* CodeParser::PrintContext::RPAR() {
  return getToken(CodeParser::RPAR, 0);
}

std::vector<tree::TerminalNode *> CodeParser::PrintContext::COMMA() {
  return getTokens(CodeParser::COMMA);
}

tree::TerminalNode* CodeParser::PrintContext::COMMA(size_t i) {
  return getToken(CodeParser::COMMA, i);
}


size_t CodeParser::PrintContext::getRuleIndex() const {
  return CodeParser::RulePrint;
}


antlrcpp::Any CodeParser::PrintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitPrint(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::PrintContext* CodeParser::print() {
  PrintContext *_localctx = _tracker.createInstance<PrintContext>(_ctx, getState());
  enterRule(_localctx, 12, CodeParser::RulePrint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(CodeParser::PRINT);
    setState(101);
    match(CodeParser::LPAR);
    setState(102);
    operation();
    setState(107);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CodeParser::COMMA) {
      setState(103);
      match(CodeParser::COMMA);
      setState(104);
      operation();
      setState(109);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(110);
    match(CodeParser::RPAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputContext ------------------------------------------------------------------

CodeParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CodeParser::InputContext::FLOAT_TYPE() {
  return getToken(CodeParser::FLOAT_TYPE, 0);
}

std::vector<tree::TerminalNode *> CodeParser::InputContext::LPAR() {
  return getTokens(CodeParser::LPAR);
}

tree::TerminalNode* CodeParser::InputContext::LPAR(size_t i) {
  return getToken(CodeParser::LPAR, i);
}

tree::TerminalNode* CodeParser::InputContext::INPUT() {
  return getToken(CodeParser::INPUT, 0);
}

std::vector<tree::TerminalNode *> CodeParser::InputContext::RPAR() {
  return getTokens(CodeParser::RPAR);
}

tree::TerminalNode* CodeParser::InputContext::RPAR(size_t i) {
  return getToken(CodeParser::RPAR, i);
}

tree::TerminalNode* CodeParser::InputContext::INT_TYPE() {
  return getToken(CodeParser::INT_TYPE, 0);
}


size_t CodeParser::InputContext::getRuleIndex() const {
  return CodeParser::RuleInput;
}


antlrcpp::Any CodeParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::InputContext* CodeParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 14, CodeParser::RuleInput);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(127);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CodeParser::FLOAT_TYPE: {
        enterOuterAlt(_localctx, 1);
        setState(112);
        match(CodeParser::FLOAT_TYPE);
        setState(113);
        match(CodeParser::LPAR);
        setState(114);
        match(CodeParser::INPUT);
        setState(115);
        match(CodeParser::LPAR);
        setState(116);
        match(CodeParser::RPAR);
        setState(117);
        match(CodeParser::RPAR);
        break;
      }

      case CodeParser::INT_TYPE: {
        enterOuterAlt(_localctx, 2);
        setState(118);
        match(CodeParser::INT_TYPE);
        setState(119);
        match(CodeParser::LPAR);
        setState(120);
        match(CodeParser::INPUT);
        setState(121);
        match(CodeParser::LPAR);
        setState(122);
        match(CodeParser::RPAR);
        setState(123);
        match(CodeParser::RPAR);
        break;
      }

      case CodeParser::INPUT: {
        enterOuterAlt(_localctx, 3);
        setState(124);
        match(CodeParser::INPUT);
        setState(125);
        match(CodeParser::LPAR);
        setState(126);
        match(CodeParser::RPAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_assContext ------------------------------------------------------------------

CodeParser::Var_assContext::Var_assContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CodeParser::Var_assContext::IDENTIFICATOR() {
  return getTokens(CodeParser::IDENTIFICATOR);
}

tree::TerminalNode* CodeParser::Var_assContext::IDENTIFICATOR(size_t i) {
  return getToken(CodeParser::IDENTIFICATOR, i);
}

std::vector<CodeParser::InitContext *> CodeParser::Var_assContext::init() {
  return getRuleContexts<CodeParser::InitContext>();
}

CodeParser::InitContext* CodeParser::Var_assContext::init(size_t i) {
  return getRuleContext<CodeParser::InitContext>(i);
}

std::vector<tree::TerminalNode *> CodeParser::Var_assContext::COMMA() {
  return getTokens(CodeParser::COMMA);
}

tree::TerminalNode* CodeParser::Var_assContext::COMMA(size_t i) {
  return getToken(CodeParser::COMMA, i);
}


size_t CodeParser::Var_assContext::getRuleIndex() const {
  return CodeParser::RuleVar_ass;
}


antlrcpp::Any CodeParser::Var_assContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitVar_ass(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::Var_assContext* CodeParser::var_ass() {
  Var_assContext *_localctx = _tracker.createInstance<Var_assContext>(_ctx, getState());
  enterRule(_localctx, 16, CodeParser::RuleVar_ass);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    match(CodeParser::IDENTIFICATOR);
    setState(134);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CodeParser::COMMA) {
      setState(130);
      match(CodeParser::COMMA);
      setState(131);
      match(CodeParser::IDENTIFICATOR);
      setState(136);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(137);
    match(CodeParser::T__0);
    setState(138);
    init();
    setState(143);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CodeParser::COMMA) {
      setState(139);
      match(CodeParser::COMMA);
      setState(140);
      init();
      setState(145);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InitContext ------------------------------------------------------------------

CodeParser::InitContext::InitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CodeParser::OperationContext* CodeParser::InitContext::operation() {
  return getRuleContext<CodeParser::OperationContext>(0);
}

CodeParser::InputContext* CodeParser::InitContext::input() {
  return getRuleContext<CodeParser::InputContext>(0);
}


size_t CodeParser::InitContext::getRuleIndex() const {
  return CodeParser::RuleInit;
}


antlrcpp::Any CodeParser::InitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitInit(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::InitContext* CodeParser::init() {
  InitContext *_localctx = _tracker.createInstance<InitContext>(_ctx, getState());
  enterRule(_localctx, 18, CodeParser::RuleInit);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(148);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CodeParser::FALSE:
      case CodeParser::NOT:
      case CodeParser::TRUE:
      case CodeParser::LPAR:
      case CodeParser::IDENTIFICATOR:
      case CodeParser::INT:
      case CodeParser::NUM:
      case CodeParser::ADD_OP:
      case CodeParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(146);
        operation();
        break;
      }

      case CodeParser::FLOAT_TYPE:
      case CodeParser::INPUT:
      case CodeParser::INT_TYPE: {
        enterOuterAlt(_localctx, 2);
        setState(147);
        input();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperationContext ------------------------------------------------------------------

CodeParser::OperationContext::OperationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CodeParser::DisjContext* CodeParser::OperationContext::disj() {
  return getRuleContext<CodeParser::DisjContext>(0);
}


size_t CodeParser::OperationContext::getRuleIndex() const {
  return CodeParser::RuleOperation;
}


antlrcpp::Any CodeParser::OperationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitOperation(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::OperationContext* CodeParser::operation() {
  OperationContext *_localctx = _tracker.createInstance<OperationContext>(_ctx, getState());
  enterRule(_localctx, 20, CodeParser::RuleOperation);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(150);
    disj(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statementContext ------------------------------------------------------------------

CodeParser::If_statementContext::If_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CodeParser::If_statementContext::IF() {
  return getToken(CodeParser::IF, 0);
}

tree::TerminalNode* CodeParser::If_statementContext::COLON() {
  return getToken(CodeParser::COLON, 0);
}

CodeParser::OperationContext* CodeParser::If_statementContext::operation() {
  return getRuleContext<CodeParser::OperationContext>(0);
}

CodeParser::After_colonContext* CodeParser::If_statementContext::after_colon() {
  return getRuleContext<CodeParser::After_colonContext>(0);
}


size_t CodeParser::If_statementContext::getRuleIndex() const {
  return CodeParser::RuleIf_statement;
}


antlrcpp::Any CodeParser::If_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CodeVisitor*>(visitor))
    return parserVisitor->visitIf_statement(this);
  else
    return visitor->visitChildren(this);
}

CodeParser::If_statementContext* CodeParser::if_statement() {
  If_statementContext *_localctx = _tracker.createInstance<If_statementContext>(_ctx, getState());
  enterRule(_localctx, 22, CodeParser::RuleIf_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(152);
    match(CodeParser::IF);
    setState(153);
    antlrcpp::downCast<If_statementContext *>(_localctx)->cond = operation();
    setState(154);
    match(CodeParser::COLON);
    setState(155);
    antlrcpp::downCast<If_statementContext *>(_localctx)->block = after_colon();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Elif_statementContext ------------------------------------------------------------------

CodeParser::Elif_statementContext::Elif_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CodeParser::Elif_statementContext::ELIF() {
  return getToken(CodeParser::ELIF, 0);
}

tree::TerminalNode* CodeParser::Elif_statementContext::COLON() {
  return getToken(CodeParser::COLON, 0);
}
